# Laser_Game_LTE-M

./: .~lock.Documentations _&_Liens.odt#  Composants-laser.txt  Composants.odt  Composants_IR.odt  Documentations _&_Liens.odt  README.md  SYSTEME_LASER_GAME_KICAD.kicad_prl  SYSTEME_LASER_GAME_KICAD.kicad_pro  SYSTEME_LASER_GAME_KICAD.kicad_sch  nrf9151.kicad_sch  pistolet.kicad_sch
CR/: .~lock.Compte-Rendu PFE.docx#  Compte-Rendu PFE.docx  Presentation_PFE.pptx  Script-Prensentation_EN.docx
CR/Video/: Liens_video.txt
Circuit Falstad/: Circuit-Ampli-PMOS(LASER).txt
Circuits/: CircuitLEDs_4pins.txt  Circuit_Laser_V2.txt  circuits.drawio
Conception/: SYSTEME_LASER_GAME_KICAD.kicad_pcb  SYSTEME_LASER_GAME_KICAD.kicad_prl  epaules.kicad_sch  fp-info-cache  pistolet.kicad_sch  ~SYSTEME_LASER_GAME_KICAD.kicad_sch.lck
IR_Lib/: NEC.c  NEC.h
IR_Lib_dev/: NEC.c  NEC.h
LED 4 pins/Arduino_test/: Arduino_test.ino
Prog_9161/app_emetteur/: CMakeLists.txt
Prog_Carte_Globale/App_Carte/: CMakeLists.txt  nrf9151dk_nrf9151_ns.overlay  prj.conf
Prog_Carte_Globale/App_Carte/src/: LTE-M.c  LTE-M.h  capteurs_Tir.c  capteurs_Tir.h  main.c
Prog_LED/app_LED/: nrf9151dk_nrf9151_ns.overlay
Programmation_Capteurs/Programme_Capteur/: CMakeLists.txt  nrf9151dk_nrf9151.overlay  prj.conf
Programmation_LTE-M/App_prog_LTE-M/: prj.conf
Test IR/: .~lock.Liste composants infrarouge.odt#  Liste composants infrarouge.odt
Test_laser_capteur/: Description des tests.odt  Test_laser_capteur.ino  Tests_&_Resultats.ods
pyServ-files/: index.html  server-main.py
(+40 files in other folders)
